# nummus/web/spec/api.yaml
@@ -193,51 +193,55 @@ paths:
   #         description: Account not found
   #       "422":
   #         description: Invalid parameter supplied
-  # /accounts/{accountUUID}/transactions:
-  #   get:
-  #     tags:
-  #       - Account
-  #       - Transaction
-  #     summary: Get Transactions of Account
-  #     description: Returns same data as /transactions?account=Account.uuid
-  #     operationId: nummus.web.controller_accounts.get_transactions
-  #     parameters:
-  #       - $ref: "#/components/parameters/PathAccountUUID"
-  #       - $ref: "#/components/parameters/Start"
-  #       - $ref: "#/components/parameters/End"
-  #       - $ref: "#/components/parameters/SortByAge"
-  #       - $ref: "#/components/parameters/Limit"
-  #       - $ref: "#/components/parameters/Offset"
-  #       - $ref: "#/components/parameters/Search"
-  #       - $ref: "#/components/parameters/TransactionCategory"
-  #       - $ref: "#/components/parameters/TransactionSubcategory"
-  #       - $ref: "#/components/parameters/TransactionTag"
-  #       - $ref: "#/components/parameters/TransactionLocked"
-  #       - $ref: "#/components/parameters/AssetUUID"
-  #       - $ref: "#/components/parameters/AssetCategoryExplicit"
-  #     responses:
-  #       "200":
-  #         description: Successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 transactions:
-  #                   type: array
-  #                   items:
-  #                     $ref: "#/components/schemas/TransactionSplit"
-  #                 next_offset:
-  #                   description: Offset to use to fetch next page, null
-  #                     indicates no more pages available
-  #                   type: integer
-  #                   nullable: true
-  #      "400":
-  #        description: Malformed request
-  #       "404":
-  #         description: Asset not found
-  #       "422":
-  #         description: Invalid parameter supplied
+  /accounts/{accountUUID}/transactions:
+    get:
+      tags:
+        - Account
+        - Transaction
+      summary: Get Transactions of Account
+      description: Returns same data as /transactions?account=Account.uuid
+      operationId: nummus.web.controller_accounts.get_transactions
+      parameters:
+        - $ref: "#/components/parameters/PathAccountUUID"
+        - $ref: "#/components/parameters/Start"
+        - $ref: "#/components/parameters/End"
+        - $ref: "#/components/parameters/SortByAge"
+        - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/Offset"
+        - $ref: "#/components/parameters/Search"
+        - $ref: "#/components/parameters/TransactionCategory"
+        - $ref: "#/components/parameters/TransactionSubcategory"
+        - $ref: "#/components/parameters/TransactionTag"
+        - $ref: "#/components/parameters/TransactionLocked"
+        - $ref: "#/components/parameters/AssetUUID"
+        - $ref: "#/components/parameters/AssetCategoryExplicit"
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  transactions:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/TransactionSplit"
+                  count:
+                    description: Number of matches to request query
+                    type: number
+                    format: integer
+                  next_offset:
+                    description: Offset to use to fetch next page, null
+                      indicates no more pages available
+                    type: integer
+                    nullable: true
+        "400":
+          description: Malformed request
+        "404":
+          description: Account or Asset not found
+        "422":
+          description: Invalid parameter supplied
   /assets:
     get:
       tags:
@@ -577,6 +581,10 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/TransactionSplit"
+                  count:
+                    description: Number of matches to request query
+                    type: number
+                    format: integer
                   next_offset:
                     description: Offset to use to fetch next page, null
                       indicates no more pages available
